# tauri-plugin-hypergraphsql

./: .gitignore  .npmignore  Cargo.toml  LICENSE-MIT  README.md  api-iife.js  biome.json  build.rs  package.json  pnpm-lock.yaml  rollup.config.js  tsconfig.json
.github/workflows/: test.yml
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: create_edge.toml  create_node.toml  delete_edge.toml  delete_edges.toml  delete_edges_by_uri.toml  delete_node.toml  delete_nodes.toml  delete_nodes_by_uri.toml  update_edge.toml  update_node.toml
permissions/schemas/: schema.json
src/: commands.rs  init.rs  lib.rs  pool.rs
