[package]
authors = ["nathanfaucett@gmail.com"]
description = "tauri plugin for a hypergraph in sqlite"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "tauri-plugin-hypergraphsql"
repository = "https://github.com/aicacia/tauri-plugin-hypergraphsql"
rust-version = "1.56"
version = "0.1.0"
links = "tauri-plugin-hypergraphsql"

[dependencies]
tauri = { version = "2", default-features = false }
tauri-build = { version = "2", default-features = false }
tauri-plugin = { version = "2", default-features = false }

serde = { version = "1", default-features = false, features = ["derive"] }
serde_json = { version = "1", default-features = false }

hypergraphsql = { git = "http://github.com/aicacia/rs-hypergraphsql.git", rev = "5de4f85" }
sqlx = { version = "0.8", default-features = false, features = [
  "sqlite",
  "runtime-tokio",
] }

lazy_static = { version = "1.5", default-features = false }
expiringmap = { version = "0.1", default-features = false }

[build-dependencies]
tauri-plugin = { version = "2", default-features = false, features = ["build"] }

[dev-dependencies]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
incremental = false
opt-level = "z"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.platforms.support]
windows = { level = "full", notes = "" }
linux = { level = "full", notes = "" }
macos = { level = "full", notes = "" }
android = { level = "full", notes = "" }
ios = { level = "full", notes = "" }
